--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.4.1
+crispy-tailwind==0.5.0
 Django==3.1.4
+django-crispy-forms==1.13.0
 python-decouple==3.5
 pytz==2021.3
 sqlparse==0.4.2
